<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="480dp"
        android:layout_height="480dp"
        android:src="@drawable/casco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:background="@color/rectangles"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="37.5dp"
            android:src="@drawable/logo"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_margin="100dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/hint_usuario"
        android:padding="20dp"
        android:textColorHint="@color/placeholder"
        android:textColor="@color/white"
        android:maxLines="1"
        android:inputType="text"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/hint_contrasena"
        android:padding="20dp"
        android:textColorHint="@color/placeholder"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editText2"
        app:layout_constraintVertical_bias="0.34" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="140dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/btn"
        android:fontFamily="@font/leaguespartan_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textColor="@color/white"
        android:text="@string/btn_login"
        android:textSize="24sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.6"
        app:strokeWidth=".4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

