<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".CARegistrarUsuario"
    android:id="@+id/main"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="620dp"
            android:layout_height="620dp"
            android:layout_marginStart="-120dp"
            android:rotation="30"
            android:src="@drawable/casco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="140dp"
                android:text="@string/text_nombre"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editText_nombre"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/hint_ingrese_aqu_su_nombre"
                android:inputType="text"
                android:padding="20dp"
                android:textColorHint="@color/placeholder"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="140dp"
                android:text="@string/text_apellido"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/hint_ingrese_aqu_su_apellido"
                android:inputType="text"
                android:padding="20dp"
                android:textColorHint="@color/placeholder"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="16dp"
                        android:text="@string/text_documento"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/spinner_tipo"
                        android:layout_width="131.5dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/rounded_edit_text"
                        android:paddingStart="11.5dp"
                        android:textColorHint="@color/placeholder"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="228.5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="55dp"
                        android:foregroundGravity="center_horizontal"
                        android:text="@string/n_mero"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="208dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        android:background="@drawable/rounded_edit_text"
                        android:hint="@string/hint_nro_de_documento"
                        android:inputType="text"
                        android:padding="20dp"
                        android:textColorHint="@color/placeholder"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccione tipo de usuario"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal" />
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_socio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Socio"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_no_socio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Socio"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RadioGroup>
            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="208dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_limpiar"
                        android:layout_width="131.5dp"
                        android:layout_height="68dp"
                        android:backgroundTint="@color/btn"
                        android:fontFamily="@font/leaguespartan_bold"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="LIMPIAR"
                        android:textColor="#FC4141"
                        android:textSize="20sp"
                        app:cornerRadius="16dp"
                        app:strokeWidth=".4dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="228.5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="208dp"
                        android:layout_height="208dp"
                        android:layout_gravity="end"
                        android:background="@drawable/profile_picture"
                        android:src="@drawable/profile_picture" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btn_atras"
                android:layout_width="150dp"
                android:layout_height="68dp"
                android:backgroundTint="@color/btn"
                android:fontFamily="@font/leaguespartan_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:textColor="@color/white"
                android:text="Atrás"
                android:textSize="20sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth=".4dp" />

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="150dp"
                android:layout_height="68dp"
                android:padding="0dp"
                android:backgroundTint="@color/btn"
                android:fontFamily="@font/leaguespartan_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="INGRESAR"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth=".4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>


